# SystemFailuresAiAgent

./: .dockerignore  .env.docker  CLAUDE.md  README.md  docker-compose.yml  main.py  prd.md  pyproject.toml  sfa.db
.github/workflows/: ci-cd.yml
docker/: api.Dockerfile  ui.Dockerfile
docker/grafana/dashboards/: sfa-overview.json
docker/prometheus/: prometheus.yml
infra/aws/: cloudformation.yml  deploy.sh
migrations/: env.py
src/agents/: commander.py  deploy_agent.py  logs_agent.py  metrics_agent.py  tools.py
src/api/: app.py  dependencies.py  schemas.py
src/api/routes/: alerts.py  health.py  investigations.py  metrics.py  reports.py
src/core/: config.py  logging.py  models.py  rate_limiter.py  runner.py  state.py
src/data/: mock_generator.py  scenarios.py  topology.py
src/db/: engine.py  models.py  repository.py
src/graph/: investigation.py
src/remediation/: github_actions.py
src/reports/: generator.py  pdf_exporter.py
src/reports/templates/: rca_styles.css  rca_template.md.j2
src/ui/: app.py
src/ui/components/: alert_trigger.py  api_client.py  cot_graph.py  metric_charts.py  rca_viewer.py  service_health.py
src/ui/pages/: 1_Dashboard.py  2_Investigation.py  3_History.py  4_Configuration.py  5_Live_Monitor.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_db_repository.py  test_graph_flow.py
tests/unit/: test_config.py  test_mock_generator.py  test_models.py  test_pdf_exporter.py  test_rate_limiter.py  test_remediation.py  test_reports.py  test_topology.py
(+1 files in other folders)
